# UCAS-Compiler-CACT

./: .gitignore  CMakeLists.txt  README.md  boot.ps1  myscript.sh  share_CACT.sh  test.hello
.devcontainer/: devcontainer.json
.history/: .gitignore_20240414012856  .gitignore_20240414112938
grammar/: CACT.g4
reports/PR001实验报告/: PR001实验报告.md
reports/PR002实验报告/: PR002实验报告.md  loop.dot
reports/PR003实验报告/: PR003实验报告.md
src/: BackEnd.cpp  BackEnd.h  CACT.h  ErrorHandler.cpp  ErrorHandler.h  FrontEnd.cpp  FrontEnd.h  IRGenerator.cpp  IRGenerator.h  Optimizer.cpp  Optimizer.h  ReturnValue.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  main.cpp  symbolTable.cpp  symbolTable.h
src/IR/: IRArgument.cpp  IRArgument.h  IRBasicBlock.cpp  IRBasicBlock.h  IRConstant.cpp  IRConstant.h  IRDerivedTypes.h  IRFunction.cpp  IRFunction.h  IRGlobalValue.cpp  IRGlobalValue.h  IRGlobalVariable.cpp  IRGlobalVariable.h  IRInstruction.cpp  IRInstruction.h  IRModule.cpp  IRModule.h  IRType.cpp  IRType.h  IRUse.cpp  IRUse.h  IRUser.cpp  IRUser.h  IRValue.cpp  IRValue.h  InstrTypes.h  Instruction.def  iBranch.cpp  iMemory.cpp  iMemory.h  iOperators.cpp  iOperators.h  iOther.cpp  iOther.h  iPHINdoe.h  iTerminators.h
src/Interpreter/: Interpreter.cpp  Interpreter.h  TemporaryVariable.cpp  TemporaryVariable.h
src/Pass/: A0MovePass.cpp  A0MovePass.h  AggressiveDeadCodeEliminatePass.cpp  AggressiveDeadCodeEliminatePass.h  AlgebraicPass.cpp  AlgebraicPass.h  ConstantPass.cpp  ConstantPass.h  CutDeadBlockPass.cpp  CutDeadBlockPass.h  CutDeadCodePass.cpp  CutDeadCodePass.h  DeleteNonepredsPass.cpp  DeleteNonepredsPass.h  EliminateBasicInductionVarPass.cpp  EliminateBasicInductionVarPass.h  GlobalSubExpPass.cpp  GlobalSubExpPass.h  HoistingLoopInvariantValuePass.cpp  HoistingLoopInvariantValuePass.h  LocalSubExpPass.cpp  LocalSubExpPass.h  LoopArrayScalarizePass.cpp  LoopArrayScalarizePass.h  MemToRegPass.cpp  MemToRegPass.h  PHIdeletePass.cpp  PHIdeletePass.h  Pass.cpp  Pass.h  Register.cpp  Register.h  RegisterPass.cpp  RegisterPass.h  RenamePass.cpp  RenamePass.h  StrengthReductionPass.cpp  StrengthReductionPass.h
src/RISC-V/: BasicBlock.cpp  BasicBlock.h  BinaryOperator.cpp  BinaryOperator.h  BranchInst.cpp  BranchInst.h  CallInst.cpp  CallInst.h  Environment.h  Function.cpp  Function.h  GlobalVariable.cpp  GlobalVariable.h  Instruction.cpp  Instruction.def  Instruction.h  JInst.cpp  JInst.h  LiInst.cpp  LiInst.h  LoadInst.cpp  LoadInst.h  Module.cpp  Module.h  MoveInst.cpp  MoveInst.h  ReturnInst.cpp  ReturnInst.h  SetCondInst.cpp  SetCondInst.h  StoreInst.cpp  StoreInst.h  User.cpp  User.h  Value.cpp  Value.h
src/utils/: BasicInductionVariable.cpp  BasicInductionVariable.h  CACT.h  CLParser.cpp  CLParser.h  ControlDependenceGraph.cpp  ControlDependenceGraph.h  ControlDependenceGraphVertex.cpp  ControlDependenceGraphVertex.h  ControlFlowGraph.cpp  ControlFlowGraph.h  ControlFlowGraphVertex.cpp  ControlFlowGraphVertex.h  DominatorTree.cpp  DominatorTree.h  ErrorHandler.cpp  ErrorHandler.h  LiveVariable.cpp  LiveVariable.h  LoopInfo.cpp  LoopInfo.h  ReachingDefinition.cpp  ReachingDefinition.h  Register.cpp  Register.h  RegisterMove.cpp  RegisterMove.h  RegisterNode.cpp  RegisterNode.h  ReturnValue.cpp  ReturnValue.h
test/: runllvm.sh
test/samples_codegen_functional/: 0_test_functional.py  execute.py  move.sh
test/samples_codegen_llvmtest/: PR003_samples_gen.py  fib_subseq.cact  matrix.cact  tim_sort.cact
test/samples_lex_and_syntax/: 03_false_bracket.cact  17_true_multi_dim_fparam.cact  22_true_func.cact  25_false_nested_func_def.cact  26_true_multi_dim_const.cact
test/samples_semantic/: 00_true_use_after_decl.cact  01_false_use_undef_decl.cact  02_false_use_before_decl.cact  07_false_float_int_op.cact  09_false_array_vector_op.cact  10_false_val_add_type.cact  14_true_assignment.cact  20_true_builtin_func.cact  34_true_multidim_init.cact  35_true_float_multidim_call.cact  36_false_array_wrong_type.cact  37_false_path_not_return.cact  38_true_same_name.cact
test/samples_semantic_self/: 00_true_path_return_0.cact  01_true_path_return_1.cact  02_false_path_return_2.cact  03_true_test_array.cact  (+10 more)
testbench/: syntax_test.sh
(+84 files in other folders)
